Updated classes and modules.

--- a/DebugLogger.cls
+++ b/DebugLogger.cls
@@ -3,16 +3,18 @@ BEGIN
   MultiUse = -1  'True
 END
 Attribute VB_Name = "DebugLogger"
-Attribute VB_GlobalNameSpace = True
-Attribute VB_Creatable = True
+Attribute VB_GlobalNameSpace = False
+Attribute VB_Creatable = False
 Attribute VB_PredeclaredId = False
 Attribute VB_Exposed = True
-Public logForm As LoggerForm
+Option Explicit
+
+Public logForm As loggerForm
 Public Log As String
 
 
 Private Sub Class_Initialize()
-    Set Me.logForm = New LoggerForm
+    Set Me.logForm = New loggerForm
     
     Me.Log = ""
     Me.add "Logger initialized..."
@@ -40,10 +42,22 @@ Private Sub updateLog()
 End Sub
 
 
-Public Sub add(ByVal message As String)
+Public Sub add(ByVal message As String, Optional ByVal severity As String = "INFO")
     Dim logMessage As String
+    Dim messageSeverity As String
     
-    logMessage = Now & " >> " & message
+    Select Case UCase(severity)
+        Case "0", "I", "INFO"
+            messageSeverity = "INFO"
+        Case "1", "W", "WARNING"
+            messageSeverity = "WARNING"
+        Case "2", "E", "ERROR"
+            messageSeverity = "ERROR"
+        Case Else
+            messageSeverity = "NONE"
+    End Select
+
+    logMessage = DateTime.Now & " [" & messageSeverity & "]" & " >> " & message
     Me.Log = Me.Log & logMessage & vbCrLf
     updateLog
     Debug.Print logMessage
